# Filtering

livox_filter/src/: CMakeLists.txt  package.xml
livox_filter/src/config/: params.yaml
livox_filter/src/include/: normal_estimation.h
livox_filter/src/launch/: run.launch
livox_filter/src/src/: normal_estimation.cpp  normal_estimation_node.cpp
ray_ground_filter/src/ray_ground_filter/: CMakeLists.txt  package.xml
ray_ground_filter/src/ray_ground_filter/cfg/: Ray.cfg
ray_ground_filter/src/ray_ground_filter/include/: ray_ground_filter.h
ray_ground_filter/src/ray_ground_filter/launch/: ray_ground_filter.launch
ray_ground_filter/src/ray_ground_filter/src/: ray_ground_filter.cpp  ray_ground_filter_node.cpp
ring_ground_filter/src/ring_ground_filter/: CMakeLists.txt  package.xml
ring_ground_filter/src/ring_ground_filter/launch/: ring_ground_filter.launch
ring_ground_filter/src/ring_ground_filter/src/: ring_ground_filter.cpp
space_filter/src/space_filter/: CMakeLists.txt  package.xml
space_filter/src/space_filter/launch/: space_filter.launch
space_filter/src/space_filter/src/: space_filter.cpp
